@@ -169,8 +169,8 @@ CCFLAGS = '-DPOSIX -DXWINDOWS ' + warningFlags
 CXXFLAGS = '-pipe -DPOSIX -DXWINDOWS ' + warningFlags + warningFlagsCXX
 CPPPATH = []
 if (BUILD == 'debug'):
-	CXXFLAGS += '-g -D_DEBUG '
-	CCFLAGS += '-g -D_DEBUG '
+	CXXFLAGS += '-g3 -D_DEBUG '
+	CCFLAGS += '-g3 -D_DEBUG '
 elif (BUILD == 'release' or BUILD == 'final'):
 	CXXFLAGS += '-O2 '
 	CCFLAGS += '-O2 '
