@@ -4,6 +4,9 @@ that we distribute with the binaries. (see changelog)
 09/07/2006
 Shaderman
 - Updated win32 libxml2 package to 2.6.24.
+namespace
+- Ported win32 stack-backtrace to use new DebugHelp API.
+- Added stack-backtrace functionality for Linux/OSX.
 
 11/06/2006
 SPoG
